--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,15 +18,16 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-
-
-      - name: 设置 Node.js
-        uses: actions/setup-node@v3
+      - uses: actions/cache@v3
+        id: node-modules
         with:
-          node-version: 16
-          cache: yarn
+          path: node_modules/
+          key: ${{ runner.os }}-node-modules-${{ hashFiles('yarn.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-node-modules-
 
       - name: 安装依赖
+        if: steps.node-modules.outputs.cache-hit != 'true'
         run: yarn install --frozen-lockfile
 
       - name: 构建文档
@@ -39,5 +40,5 @@ jobs:
         with:
           # 这是文档部署到的分支名称
           branch: gh-pages
-          folder: web/.vuepress/dist
+          folder: nstarmc-tools-docs/.vuepress/dist
 
