--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 
 node_modules/
-nstarmc-tools-docs/.vuepress/.cache/
-nstarmc-tools-docs/.vuepress/.temp/
-nstarmc-tools-docs/.vuepress/dist/
+nstarmc/.vuepress/.cache/
+nstarmc/.vuepress/.temp/
+nstarmc/.vuepress/dist/
