--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "docs:dev": "vuepress dev nstarmc"
   },
   "devDependencies": {
+    "@vuepress/client": "^2.0.0-beta.48",
+    "vue": "^3.2.36",
     "vuepress": "^2.0.0-beta.48",
     "vuepress-theme-hope": "^2.0.0-beta.83"
   }
