--- a/.github/workflows/deploy-docs.yml
+++ b/.github/workflows/deploy-docs.yml
@@ -18,7 +18,8 @@ jobs:
           # 如果你文档需要 Git 子模块，取消注释下一行
           # submodules: true
 
-      - uses: actions/cache@v3
+      - name: 检查缓存
+        uses: actions/cache@v3
         id: node-modules
         with:
           path: node_modules/
